src/test/ui/mismatched_types/E0281.stderr
error[E0281]: type mismatch: `[closure@$DIR/E0281.rs:14:9: 14:24]` implements the trait `std::ops::Fn<(std::string::String,)>`, but the trait `std::ops::Fn<(usize,)>` is required
  --> $DIR/E0281.rs:14:5
   |
14 |     foo(|y: String| { });
   |     ^^^ --------------- implements `std::ops::Fn<(std::string::String,)>`
   |     |
   |     requires `std::ops::Fn<(usize,)>`
   |     expected usize, found struct `std::string::String`
   |
   = note: required by `foo`

error: aborting due to 2 previous errors

